Fix h1 and text alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -373,6 +373,15 @@ main .featured-article {
   margin-bottom: 24px;
 }
 
+main .featured-article-container > div {
+  padding: 0;
+}
+
+main .featured-article-container div h1 {
+  padding: 0 2rem;
+  text-align: center;
+}
+
 main .article-feed {
   min-height: 900px;  
 }
